k8s/environments/rabbitmq/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  labels:
    env: production
    tier: backend
    app: rabbitmq
    name: rabbitmq-ingress
spec:
  rules:
    - host: <RabbitMQ 도메인> # TODO
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq
              servicePort: 15672
